[package]
name = "runwithcreds"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hocon = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
directories = "4.0.1"

[dependencies.windows]
version = "0.33.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
